WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120075
REGRESSION (
r128400
): BBC4 website not displaying pictures
https://bugs.webkit.org/show_bug.cgi?id=120075
Summary
REGRESSION (r128400): BBC4 website not displaying pictures
Michael Saboff
Reported
2013-08-20 11:06:15 PDT
Javascript is used to process the image paths shown on
http://www.bbc.co.uk/bbcfour/best-of
. As of
r128400
, that processing is not working. It turns out that the array returned by RegExp.match gets reified after PutByVal write are done to the array, thus overwriting the modifications to the array. This is due to the array indexing type being wrong for RegExpMatchesArray objects. Currently it is ArrayWithArrayStorage and should be ArrayWithSlowPutArrayStorage. Patch forthcoming. <
rdar://problem/14716775
>
Attachments
Patch
(4.36 KB, patch)
2013-08-20 11:41 PDT
,
Michael Saboff
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2013-08-20 11:41:14 PDT
Created
attachment 209211
[details]
Patch
Michael Saboff
Comment 2
2013-08-20 11:46:39 PDT
Committed
r154346
: <
http://trac.webkit.org/changeset/154346
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug