https://bugs.webkit.org/show_bug.cgi?id=120075 REGRESSION (r128400): BBC4 website not displaying pictures

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* runtime/RegExpMatchesArray.h:
(JSC::RegExpMatchesArray::createStructure): Changed the array IndexingType to be ArrayWithSlowPutArrayStorage
so that the match results will be reified before any other modification to the results array.

LayoutTests:

Added regression tests for fix.

* fast/js/regress/regexp-match-reify-before-putbyval-expected.txt: Added.
* fast/js/regress/regexp-match-reify-before-putbyval.html: Added.
* fast/js/regress/script-tests/regexp-match-reify-before-putbyval.js: Added.


Canonical link: https://commits.webkit.org/138011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154346 268f45cc-cd09-0410-ab3c-d52691b4dbfc